membuat artikel perjalanan di bulan puasa

--- a/_drafts/2024-10-30-fidyah.md
+++ b/_drafts/2024-10-30-fidyah.md
@@ -9,3 +9,11 @@ Hadhrat Masih Mau'ud (as) bersabda,
 Suatu saat timbul pertanyaan dalam fikiran saya bahwa untuk apa fidyah ini ditetapkan ? Maka dapat dimaklumi bahwa itu adalah untuk mendapatkan taufik supaya dari itu dapat diraih taufik untuk berpuasa. Zat Allah sematalah yang menganugerahkan taufik dan seyogianya harus memohon segala sesuatunya hanya pada Tuhan. Allah adalah Penguasa mutlak. Jika Dia menghendaki maka Dia dapat menganugerahkan taufik pada seorang yang terkena penyakit paru-paru untuk berpuasa. Jadi, maksud fidyah adalah supaya meraih taufik untuk itu dan ini dapat diraih dengan karunia Allah. Karena itu menurut saya manusia harus benar-benar berdoa : ” Ya Allah ! ini merupakan bulan-Mu yang penuh berkat dan saya tengah luput dari itu. Mana dapat diketahui,apakah tahun depan saya akan hidup atau tidak,atau saya dapat melaksanakan puasa yang tertinggal itu atau tidak. Dan andaikata dia memohon taufik pada-Nya,maka saya yakin Dia akan menganugerahkan kemampuan pada hati sanubari orang seperti itu. (Malfuzhat Jilid 2:563 Edisi Baru) [[^khotbah-20041015]]
 
 [^khotbah-20041015]: Khotbah Jumat Sayyidina Amirul Mu’minin, Hadhrat Mirza Masrur Ahmad, Khalifatul Masih al-Khaamis (aba) tanggal 15 Oktober 2004 di Mesjid Baitulfutuh, Morden, London
+
+Hadhrat Masih Mau'ud (as) bersabda,
+
+"Allah telah meletakkan asas syariat pada kemudahan. Orang musafir dan orang sakit yang memiliki kemampuan maka seyogianya sebagai ganti puasa harus memberikan fidyah. Fidyah itu adalah diberikan makan pada seorang fakir miskin". [[^albadar-j6-no42-1907xx17-h7]] [[^khotbah-20031024]]
+
+[^albadar-j6-no42-1907xx17-h7]: Al-Badar jilid 6 no.42 tanggal 17 1907 hal.7. 
+
+[^khotbah-20031024]: khutbah Jum'ah Hadhrat Khalifatul Masih V Atb. tgl. 24-10-2003 dalam DARSUS No. 5/Isy/PB/2004
